--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/dotenv": "^1.4.1",
     "acorn": "^6.4.1",
     "compass-mixins": "^0.12.10",
     "dot-prop": "^5.1.1",
