--- a/package.json
+++ b/package.json
@@ -13,17 +13,12 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.1",
-    "acorn": "^6.4.1",
     "compass-mixins": "^0.12.10",
-    "dot-prop": "^5.1.1",
-    "kind-of": "^6.0.3",
-    "minimist": "^1.2.3",
     "node-sass": "^4.13.0",
     "nuxt": "^2.14.0",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^8.0.0",
-    "serialize-javascript": "^3.1.0"
+    "sass-loader": "^8.0.0"
   },
   "devDependencies": {}
 }
