--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.1",
-    "compass-mixins": "^0.12.10",
-    "node-sass": "^4.13.0",
+    "compass-mixins": "0.12.12",
     "nuxt": "^2.14.0",
     "pug": "^3.0.1",
     "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^8.0.0"
+    "sass": "^1.58.3",
+    "sass-loader": "10.1.1"
   },
   "devDependencies": {}
 }
